--- a/index.html
+++ b/index.html
@@ -179,5 +179,111 @@ loginBtn.addEventListener('click', async () => {
   }
 });
 
-// Helper: generate random pastel colors for charts
-function randomColor(i){ const colors=["#FF6F61","#FFD166","#06D6A0","#4D96FF","#FF6FFF","#FFA500"]; return colors[i%colors
+// Helper: random colors
+function randomColor(i){ const colors=["#FF6F61","#FFD166","#06D6A0","#4D96FF","#FF6FFF","#FFA500"]; return colors[i%colors.length]; }
+
+function initDashboard(){
+
+  // Real-time listeners
+  db.collection('members').orderBy('createdAt').onSnapshot(snapshot => {
+    membersList.innerHTML=''; let membersData=[]; let total=0; let top=0; let topName='-';
+    snapshot.forEach(doc=>{
+      const data=doc.data(); total+=data.amount;
+      if(data.amount>top){top=data.amount; topName=data.name;}
+      const li=document.createElement('li'); li.textContent=`${data.name} - ₹${data.amount}`;
+      if(currentUser.uid===YOUR_UID){
+        const edit=document.createElement('button'); edit.textContent='✏️'; edit.className='edit-btn';
+        edit.onclick=()=>{ const newAmt=prompt("Enter new amount",data.amount); if(newAmt){db.collection('members').doc(doc.id).update({amount:parseInt(newAmt)})}};
+        const del=document.createElement('button'); del.textContent='🗑'; del.className='delete-btn';
+        del.onclick=()=>{db.collection('members').doc(doc.id).delete()};
+        li.appendChild(edit); li.appendChild(del);
+      }
+      membersList.appendChild(li); membersData.push(data.amount);
+    });
+    totalIncomeEl.textContent=total;
+    topContributorEl.textContent=topName;
+    updateChart(membersChart,'members-chart',snapshot.docs.map(d=>d.data().name),membersData);
+    updateTrendChart();
+  });
+
+  db.collection('otherIncome').orderBy('createdAt').onSnapshot(snapshot => {
+    incomeList.innerHTML=''; let dataVals=[]; let total=0; let top=0; let topName='-';
+    snapshot.forEach(doc=>{
+      const data=doc.data(); total+=data.amount; if(data.amount>top){top=data.amount; topName=data.source;}
+      const li=document.createElement('li'); li.textContent=`${data.source} - ₹${data.amount}`;
+      if(currentUser.uid===YOUR_UID){
+        const edit=document.createElement('button'); edit.textContent='✏️'; edit.className='edit-btn';
+        edit.onclick=()=>{ const newAmt=prompt("Enter new amount",data.amount); if(newAmt){db.collection('otherIncome').doc(doc.id).update({amount:parseInt(newAmt)})}};
+        const del=document.createElement('button'); del.textContent='🗑'; del.className='delete-btn';
+        del.onclick=()=>{db.collection('otherIncome').doc(doc.id).delete()};
+        li.appendChild(edit); li.appendChild(del);
+      }
+      incomeList.appendChild(li); dataVals.push(data.amount);
+    });
+    totalIncomeEl.textContent=parseInt(totalIncomeEl.textContent)+total;
+    topDonationEl.textContent=topName;
+    updateChart(incomeChart,'income-chart',snapshot.docs.map(d=>d.data().source),dataVals);
+    updateTrendChart();
+  });
+
+  db.collection('expenses').orderBy('createdAt').onSnapshot(snapshot => {
+    expenseList.innerHTML=''; let dataVals=[]; let total=0; let top=0; let topName='-';
+    snapshot.forEach(doc=>{
+      const data=doc.data(); total+=data.cost; if(data.cost>top){top=data.cost; topName=data.item;}
+      const li=document.createElement('li'); li.textContent=`${data.item} - ₹${data.cost}`;
+      if(currentUser.uid===YOUR_UID){
+        const edit=document.createElement('button'); edit.textContent='✏️'; edit.className='edit-btn';
+        edit.onclick=()=>{ const newAmt=prompt("Enter new cost",data.cost); if(newAmt){db.collection('expenses').doc(doc.id).update({cost:parseInt(newAmt)})}};
+        const del=document.createElement('button'); del.textContent='🗑'; del.className='delete-btn';
+        del.onclick=()=>{db.collection('expenses').doc(doc.id).delete()};
+        li.appendChild(edit); li.appendChild(del);
+      }
+      expenseList.appendChild(li); dataVals.push(data.cost);
+    });
+    totalExpenseEl.textContent=total;
+    topExpenseEl.textContent=topName;
+    updateChart(expenseChart,'expense-chart',snapshot.docs.map(d=>d.data().item),dataVals);
+    updateTrendChart();
+  });
+}
+
+// Add entries
+addMemberBtn.onclick=()=>{if(currentUser.uid===YOUR_UID){if(memberName.value && memberAmount.value){db.collection('members').add({name:memberName.value,amount:parseInt(memberAmount.value),createdAt:firebase.firestore.FieldValue.serverTimestamp()}); memberName.value=''; memberAmount.value='';}}};
+addIncomeBtn.onclick=()=>{if(currentUser.uid===YOUR_UID){if(incomeSource.value && incomeAmount.value){db.collection('otherIncome').add({source:incomeSource.value,amount:parseInt(incomeAmount.value),createdAt:firebase.firestore.FieldValue.serverTimestamp()}); incomeSource.value=''; incomeAmount.value='';}}};
+addExpenseBtn.onclick=()=>{if(currentUser.uid===YOUR_UID){if(expenseItem.value && expenseCost.value){db.collection('expenses').add({item:expenseItem.value,cost:parseInt(expenseCost.value),createdAt:firebase.firestore.FieldValue.serverTimestamp()}); expenseItem.value=''; expenseCost.value='';}}};
+
+// Chart helpers
+function updateChart(chartObj,canvasId,labels,data){
+  if(chartObj) chartObj.destroy();
+  const ctx=document.getElementById(canvasId).getContext('2d');
+  chartObj=new Chart(ctx,{type:'bar',data:{labels, datasets:[{label:'Amount', data, backgroundColor:labels.map((_,i)=>randomColor(i))}]}, options:{responsive:true, plugins:{legend:{display:false}}}});
+  if(canvasId==='members-chart') membersChart=chartObj;
+  else if(canvasId==='income-chart') incomeChart=chartObj;
+  else if(canvasId==='expense-chart') expenseChart=chartObj;
+}
+
+// Trend chart
+function updateTrendChart(){
+  db.collection('members').orderBy('createdAt').get().then(memSnap=>{
+    db.collection('otherIncome').orderBy('createdAt').get().then(incSnap=>{
+      db.collection('expenses').orderBy('createdAt').get().then(expSnap=>{
+        let labels=[], income=[], expense=[], cumIncome=0, cumExpense=0;
+        const maxLen=Math.max(memSnap.size,incSnap.size,expSnap.size);
+        for(let i=0;i<maxLen;i++){
+          if(memSnap.docs[i]) cumIncome+=memSnap.docs[i].data().amount;
+          if(incSnap.docs[i]) cumIncome+=incSnap.docs[i].data().amount;
+          if(expSnap.docs[i]) cumExpense+=expSnap.docs[i].data().cost;
+          labels.push(`Entry ${i+1}`);
+          income.push(cumIncome);
+          expense.push(cumExpense);
+        }
+        if(trendChart) trendChart.destroy();
+        const ctx=document.getElementById('trend-chart').getContext('2d');
+        trendChart=new Chart(ctx,{type:'line',data:{labels,datasets:[{label:'Income',data:income,borderColor:'#06D6A0',tension:0.4,fill:false},{label:'Expense',data:expense,borderColor:'#FF6F61',tension:0.4,fill:false}]},options:{responsive:true}});
+      });
+    });
+  });
+}
+</script>
+</body>
+</html>
